RESOLVED FIXED33930
Crash in JSDOMWindowBase::crossDomainAccessErrorMessage when accessing a detached sandboxed frame
https://bugs.webkit.org/show_bug.cgi?id=33930
Summary Crash in JSDOMWindowBase::crossDomainAccessErrorMessage when accessing a deta...
Alexey Proskuryakov
Reported 2010-01-20 17:32:50 PST
Patch forthcoming.
Attachments
proposed fix (4.01 KB, patch)
2010-01-20 17:42 PST, Alexey Proskuryakov
sam: review+
Alexey Proskuryakov
Comment 1 2010-01-20 17:42:21 PST
Created attachment 47086 [details] proposed fix
Alexey Proskuryakov
Comment 2 2010-01-20 17:46:56 PST
Committed revision 53587.
Note You need to log in before you can comment on or make changes to this bug.