        Reviewed by Sam Weinig.

https://bugs.webkit.org/show_bug.cgi?id=33930
        Crash in JSDOMWindowBase::crossDomainAccessErrorMessage when accessing a detached sandboxed frame

        Test: http/tests/security/detached-sandboxed-frame-access.html

        * bindings/js/JSDOMWindowBase.cpp: (WebCore::JSDOMWindowBase::crossDomainAccessErrorMessage):
        Changed the way we discover the url to match what the actual check does. Both old and new
        code correctly fetch the URL of the current window displayed in frame, but going via
        DOMWindowShell avoids crashing on null DOMWindow::m_frame pointer.



Canonical link: https://commits.webkit.org/44986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53587 268f45cc-cd09-0410-ab3c-d52691b4dbfc